Radio 80% (falta Player e Pedir Musica)

--- a/app/client/templates/pages/authentication/authentication.html
+++ b/app/client/templates/pages/authentication/authentication.html
@@ -35,9 +35,9 @@
 <template name="loginFacebook">
     <a href="#facebook" class="bg-facebook" data-service="facebook" id="loginFacebookButton">
         <i class="icon-facebook-rect"></i>
-        <span>Facebook</span>
+        <span>Entrar usando facebook</span>
     </a>
-</template>
+</template><!--
 
 <template name="loginTwitter">
     <a href="#" title="" class="bg-twitter" data-service="twitter" id="loginTwitterButton">
@@ -51,5 +51,5 @@
       <i class="icon-googleplus-rect"></i>
       <span>Google +1</span>
     </a>
-</template>
+</template> -->
 
