--- a/app/client/templates/pages/home/home.html
+++ b/app/client/templates/pages/home/home.html
@@ -8,7 +8,7 @@
 
     <main class="content">
 
-      <div class="row">
+      <div class="row padding">
         <div class="box-television col s6">
 
           <a href="{{pathFor 'television'}}" data-transition-out="scaleOut" data-transition-in="scaleIn">
@@ -26,7 +26,7 @@
           </a>
         </div>
       </div>
-      <div class="row">
+      <div class="row padding">
         <div class="box-portal col s6">
 
           <a href="{{pathFor 'portal'}}" data-transition-out="scaleOut" data-transition-in="scaleIn">
