--- a/app/client/templates/pages/radio/layouts/headerBOAFM.html
+++ b/app/client/templates/pages/radio/layouts/headerBOAFM.html
@@ -1,13 +1,21 @@
 <template name="headerBOAFM">
 
-  <nav class="main-header header">
+ <nav class="main-header header">
 
-    <div class="side-left">
-      <a href="{{ pathFor 'home' }}" class="button btn-flat" data-transition-out="slideFadeRightOut" data-transition-in="slideFadeLeftIn">
-        <img src="images/home/icons/icon-back.svg" height="18" />
-      </a>
-    </div>
+  <div class="side-left">
+    <a href="{{ pathFor 'home' }}" class="button btn-flat" data-transition-out="scaleOut" data-transition-in="scaleIn">
+      <img src="/images/television/icons/icon-back-white.svg" height="22" />
+    </a>
+  </div>
 
-  </nav>
+  <a href="#" class="title">
+    <img src="/images/radio/boa-fm.png" height="40" />
+  </a>
+
+  <div class="side-right">
+    aa
+  </div>
+
+</nav>
 
 </template>
