--- a/app/client/templates/pages/television/layouts/headerTelevision.html
+++ b/app/client/templates/pages/television/layouts/headerTelevision.html
@@ -13,8 +13,8 @@
     </a>
 
     <div class="side-right">
-      <a href="#modal-play-tv" class="button btn-flat modal-trigger">
-        <img src="images/television/icons/icon-tv.svg" height="22" style="margin:5px 0!important;" />
+     <a href="#modal-program-share" class="button btn-flat modal-trigger" id="btn-share-message">
+        <img src="/images/television/icons/icon-share.svg" height="24" />
       </a>
     </div>
 
