--- a/app/client/stylesheets/app.scss
+++ b/app/client/stylesheets/app.scss
@@ -1439,7 +1439,7 @@ html {
 
 
 .log-in {
-  margin:0 auto;display:table;box-shadow:0 0 0 0!important;font-size:14px;font-weight:800;background:transparent!important;border:2px solid #3E61A7;color:#3E61A7;border-radius:28px;
+  margin:0 auto;display:table;box-shadow:0 0 0 0!important;font-size:12px;font-weight:800;background:transparent!important;border:2px solid #3E61A7;color:#3E61A7;border-radius:28px;min-width:216px;
 }
 
 .message-feedback {
@@ -1516,3 +1516,4 @@ html {
 .show {
   display:block;visibility: visible;opacity:1;
 }
+
