--- a/app/client/templates/pages/authentication/authentication.scss
+++ b/app/client/templates/pages/authentication/authentication.scss
@@ -11,12 +11,27 @@
       width:100%;display:block;margin-bottom:5px;color:#666;text-align: center;
     }
     a {
-      display:block;float:left;color:#fff;text-decoration: none;padding:10px 12px;font-size:24px;
+          display: table;
+    width: 100%;
+    text-align: center;
+    max-width: 248px;
+    color: #fff;
+    text-decoration: none;
+    padding: 8px 12px;
+    font-size: 12px;
+    border-radius: 28px;
+    text-transform: uppercase;
+    font-weight: bold;
 
-      border-radius:50%;
-      span {
-        display:none;
-      }
+    i {
+          font-size: 16px;
+    float: left;
+    margin-right: 5px;
+}
+span {
+  line-height:24px;
+}
+    }
     }
     .bg-facebook {
       background:#3b5998;
@@ -90,7 +105,6 @@
     }
   }
 
-}
 
 #modal-change-radio {
   small {
