--- a/app/client/templates/pages/television/pages/program/program.html
+++ b/app/client/templates/pages/television/pages/program/program.html
@@ -13,16 +13,18 @@
       <a href="#" class="title center-align">
         Programa X
       </a>
-
+<!--
       <div class="side-right">
-        <a href="#modal-program-share" class="button btn-flat modal-trigger" id="btn-share-message">
-          <img src="/images/television/icons/icon-share.svg" height="24" />
-        </a>
-      </div>
+
+      </div> -->
 
     </nav>
 
     <main class="content has-header">
+
+       <main class="play-tv padding">
+        <iframe src="http://new.livestream.com/accounts/3332377/events/2958396/player?width=640&height=680&autoPlay=false&mute=false" width="100%" height="100%" frameborder="0" scrolling="no"> </iframe>
+      </main>
 
 
       <div class="info-program">
