Meteor Add Camera

--- a/app/client/templates/pages/authentication/authentication.html
+++ b/app/client/templates/pages/authentication/authentication.html
@@ -20,7 +20,8 @@
 
     <div class="sign-in">
       <span>Ainda não tem conta?</span>
-      <a class="btn modal-trigger" href="#modal-sign-in">
+      <!-- <a class="btn modal-trigger" href="#modal-sign-in"> -->
+      <a class="btn modal-trigger" href="{{ pathFor 'home' }}">
         CRIAR CONTA
       </a>
     </div>
