--- a/app/client/templates/pages/radio/layouts/headerBOAFM.html
+++ b/app/client/templates/pages/radio/layouts/headerBOAFM.html
@@ -9,7 +9,7 @@
   </div>
 
   <a href="#" class="title">
-    <img src="/images/radio/boa-fm.png" height="40" />
+    <img src="/images/radio/boafm-logo.png" height="40" />
   </a>
 
   <div class="side-right">
