--- a/app/client/templates/pages/television/pages/program/components/message/fileMessage.html
+++ b/app/client/templates/pages/television/pages/program/components/message/fileMessage.html
@@ -4,7 +4,7 @@
       <img src="/images/television/icons/icon-close-white.svg" height="20" />
     </strong>
 
-    <img src="/images/television/img1.png" width="100%" />
+    <img src="{{ img }}" width="100%" />
 
   </div>
 </template>
