--- a/app/client/templates/pages/television/pages/program/pages/share.html
+++ b/app/client/templates/pages/television/pages/program/pages/share.html
@@ -1,9 +1,9 @@
-<template name="shareProgram">
+<template name="share">
 
-  <section id="modal-program-share" class="modal">
+  <section id="modal-share" class="modal">
 
   <header class="modal-header">
-    <a href="{{ pathFor 'program' }}" class="modal-action modal-header-left modal-close" id="btn-show-message">
+    <a href="{{ pathFor 'television' }}" class="modal-action modal-header-left modal-close" id="btn-show-message">
        <img src="/images/home/icons/icon-close.svg" height="22" />
     </a>
     <h4 class="modal-title">
