--- a/app/client/templates/pages/television/television.html
+++ b/app/client/templates/pages/television/television.html
@@ -13,12 +13,12 @@
           <strong>JORNALISMO POPULAR</strong>
           <li class="programs-list-item">
             <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-              <img src="images/television/img-patrulha.png" width="100%" />
+              <img src="/images/television/img-patrulha.png" width="100%" />
             </a>
           </li>
           <li class="programs-list-item">
             <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-              <img src="images/television/img-ronda.png" width="100%" />
+              <img src="/images/television/img-ronda.png" width="100%" />
             </a>
           </li>
         </div>
@@ -26,7 +26,7 @@
           <strong>ESPORTIVIDADE</strong>
           <li class="programs-list-item">
             <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-              <img src="images/television/img-ole.png" width="100%" />
+              <img src="/images/television/img-ole.png" width="100%" />
             </a>
           </li>
         </div>
@@ -34,7 +34,7 @@
           <strong>DOMINGO AVENTURA</strong>
           <li class="programs-list-item">
             <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-              <img src="images/television/img-incrivel.png" width="100%" />
+              <img src="/images/television/img-incrivel.png" width="100%" />
             </a>
           </li>
         </div>
@@ -42,7 +42,7 @@
 
     </main>
 
-    {{> playTv }}
+    {{> share }}
 
   </div>
 
