--- a/app/client/templates/pages/authentication/authentication.scss
+++ b/app/client/templates/pages/authentication/authentication.scss
@@ -1,37 +1,35 @@
 .auth-page {
-
   .logo-sismnc {
-    margin:3.8rem 0 1.68rem 0!important;
+    margin:4.5rem 0px 1.68rem !important;
   }
 
   // Login
   .social {
     display:table;margin:0 auto;
-    small {
-      width:100%;display:block;margin-bottom:5px;color:#666;text-align: center;
-    }
-    a {
-          display: table;
-    width: 100%;
-    text-align: center;
-    max-width: 248px;
-    color: #fff;
-    text-decoration: none;
-    padding: 8px 12px;
-    font-size: 12px;
-    border-radius: 28px;
-    text-transform: uppercase;
-    font-weight: bold;
-
-    i {
-          font-size: 16px;
-    float: left;
-    margin-right: 5px;
-}
-span {
-  line-height:24px;
-}
-    }
+      small {
+        width:100%;display:block;margin-bottom:5px;color:#666;text-align: center;
+      }
+      a {
+      display: table;
+      width: 100%;
+      text-align: center;
+      max-width: 248px;
+      color: #fff;
+      text-decoration: none;
+      padding: 8px 12px;
+      font-size: 12px;
+      border-radius: 28px;
+      text-transform: uppercase;
+      font-weight: bold;
+        i {
+              font-size: 16px;
+        float: left;
+        margin-right: 5px;
+        }
+        span {
+          line-height:24px;
+        }
+      }
     }
     .bg-facebook {
       background:#3b5998;
