--- a/app/client/templates/pages/radio/boafm/boafm.scss
+++ b/app/client/templates/pages/radio/boafm/boafm.scss
@@ -7,12 +7,32 @@
         margin:3px 0 2px 0;
       }
     }
+    .player {
+      width:30px;height:30px;line-height:30px;background:#fff;color:#566CA0;float:left;margin:8px 0;
+
+      border-radius:50%;text-align:center;
+      i {}
+    }
+    .music {
+      float:left;margin:0 0.75rem 0 15px;
+
+      border-radius:28px;
+
+      a {
+        padding: 5px 10px;
+        border: 2px solid #fff;
+        color: #fff;
+        border-radius: 28px;
+        font-size: 12px;
+        font-weight: bold;
+      }
+    }
   }
 
 
 
 .tab-flow  {
-  height:100%;min-height:100%;margin-bottom:0!important;
+  margin-bottom:0!important;
   .tab-header {
     width:100%;
     .tabs {
@@ -33,7 +53,7 @@
     }
   }
   .tab-container {
-    height:100%;min-height:100%;background:#F8F8FC!important;
+   background:#F8F8FC!important;
     .tab-content {
       padding:0 0 50px 0;position:relative;
       @extend .col;
@@ -53,7 +73,6 @@
 
 .message {
   bottom:-52px;position:fixed;left:0;width:100%;box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);height:48px;background:#fff;opacity:0;z-index:5;
-
 
   transition:all .4s ease-in-out;
   -webkit-transition:all .4s ease-in-out;
