--- a/app/client/templates/pages/radio/layouts/headerFMMN.html
+++ b/app/client/templates/pages/radio/layouts/headerFMMN.html
@@ -1,22 +1,34 @@
 <template name="headerFMMN">
 
+  <nav class="main-header header">
 
-<nav class="main-header header">
+    <div class="side-left">
+      <a href="{{ pathFor 'home' }}" class="button btn-flat" data-transition-out="scaleOut" data-transition-in="scaleIn">
+        <img src="/images/radio/icons/icon-backspace-radio.svg" height="22" />
+      </a>
+    </div>
 
-  <div class="side-left">
-    <a href="{{ pathFor 'home' }}" class="button btn-flat" data-transition-out="scaleOut" data-transition-in="scaleIn">
-      <img src="/images/radio/icons/icon-backspace-radio.svg" height="22" />
+    <a href="#" class="title">
+      <img src="/images/radio/fmmn-logo.png" height="40" />
     </a>
-  </div>
 
-  <a href="#" class="title">
-    <img src="/images/radio/fmmn-logo.png" height="40" />
-  </a>
+    <div class="side-right">
 
-  <div class="side-right">
-    bb
-  </div>
+      <div class="player">
+        <a href="" title="" class="player-button">
+          <i class="icon-play"></i>
+          <i class="icon-stop hide"></i>
+        </a>
+      </div>
 
-</nav>
+      <div class="music">
+        <a href="#" title="" class="music-button">
+          PEDIR MÚSICA
+        </a>
+      </div>
+
+    </div>
+
+  </nav>
 
 </template>
