--- a/app/client/templates/pages/television/layouts/headerTelevision.html
+++ b/app/client/templates/pages/television/layouts/headerTelevision.html
@@ -4,16 +4,16 @@
 
     <div class="side-left">
       <a href="#" class="button btn-flat button-collapse" data-activates="television-navigation">
-        <img src="images/television/icons/icon-navigation.svg" height="16" />
+        <img src="/images/television/icons/icon-navigation.svg" height="16" />
       </a>
     </div>
 
     <a href="#" class="logo center-align">
-      <img src="images/television/logo-white-hor.png" height="28" />
+      <img src="/images/television/logo-white-hor.png" height="28" />
     </a>
 
     <div class="side-right">
-     <a href="#modal-program-share" class="button btn-flat modal-trigger" id="btn-share-message">
+     <a href="#modal-share" class="button btn-flat modal-trigger" id="btn-share-message">
         <img src="/images/television/icons/icon-share.svg" height="24" />
       </a>
     </div>
