--- a/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
+++ b/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
@@ -1,22 +1,22 @@
 <template name="headerNewspaper">
 
-  <nav class="header">
+  <nav class="header header-newspaper">
 
     <div class="nav-wrapper">
 
       <div class="side-left">
-        <a href="#" class="button btn-flat button-collapse" data-activates="main-navigation">
-          <img src="images/home/icons/menu.svg" height="18" />
+        <a href="#" class="button btn-flat button-collapse" data-activates="newspaper-navigation">
+          <img src="images/newspaper/icons/icon-navigation.svg" height="18" />
         </a>
       </div>
 
       <a href="#" class="logo">
-        Jornal Meio Norte
+        <img src="images/newspaper/logo-jornal-white.svg" height="28" alt="" />
       </a>
 
       <div class="side-right">
-        <a href="#modal-about" class="button btn-flat modal-trigger">
-          <img src="images/home/icons/info.svg" height="22" />
+        <a href="#" class="button btn-flat button-search">
+          <img src="images/newspaper/icons/icon-search.svg" height="24" />
         </a>
       </div>
 
