--- a/app/client/templates/pages/television/layouts/navigationTelevision.html
+++ b/app/client/templates/pages/television/layouts/navigationTelevision.html
@@ -2,7 +2,7 @@
 
   <ul id="television-navigation" class="side-nav">
 
-    <a href="{{ pathFor 'home' }}" title="Voltar para o início" class="back-to-home">
+    <a href="{{ pathFor 'home' }}" title="Voltar para o início" class="back-to-home" data-transition-out="scaleOut" data-transition-in="scaleIn">
       <i class="icon-left-2"></i>
       <span>Voltar ao início</span>
     </a>
