--- a/app/client/templates/pages/home/home.scss
+++ b/app/client/templates/pages/home/home.scss
@@ -45,6 +45,7 @@
         width: 100%;
         text-align: center;
         left: 0;
+        font-weight:bold;
         padding: 10px 0;
         font-size:14px;
         background: rgba(255,255,255,0.08);
