Configurando rotas do Jornal

--- a/app/client/templates/pages/newspaper/pages/latest/newspaperLatest.html
+++ b/app/client/templates/pages/newspaper/pages/latest/newspaperLatest.html
@@ -1,6 +1,6 @@
-<template name="newspaper">
+<template name="newspaperLatest">
 
-   <div class="newspaper-page transitions-content">
+   <div class="newspaper-page transitions-content latest">
 
     {{> yield "navigation" }}
 
