--- a/app/client/templates/pages/television/pages/program/program.html
+++ b/app/client/templates/pages/television/pages/program/program.html
@@ -1,6 +1,6 @@
 <template name="program">
 
-  <div class="television-page transitions-content" style="height:100%;">
+  <div class="television-page transitions-content">
 
     <nav class="main-header header">
 
@@ -74,10 +74,13 @@
 
         </div>
 
+
     </main>
+
 
   </div>
 
   {{> addMessage }}
+
 
 </template>
