--- a/app/client/templates/pages/newspaper/newspaper.scss
+++ b/app/client/templates/pages/newspaper/newspaper.scss
@@ -1,6 +1,12 @@
+//0A89D8
+
 .newspaper-page {
 
   font-family:'PT Sans', sans-serif;
+
+  .content {
+    height:100%;
+  }
 
   a {
     color:#2d2d2d;
@@ -8,7 +14,7 @@
 
 
   .back-to-home {
-    color:#0A89D8!important;
+    color:#999!important;
   }
 
 
@@ -94,7 +100,7 @@
       position:relative;overflow:visible!important;
       &:after {
        position: absolute;
-        bottom: -110px;
+        top:184px;
         left: 2%;
         background: #fff;
         height: 165px;
@@ -158,7 +164,7 @@
   .slick-dots {
     position: absolute;
     right: 5%;
-    bottom: 48px;
+    top: 144px;
     li {
       float:left;margin-left:5px;
       button {
@@ -181,11 +187,83 @@
 }
 
 
+.tab-container {
+  overflow:hidden;position:relative;height:100%;
+}
+
 .newspaper-tabs {
-  position:relative;height:100%;
+  position:relative;height:100%;left:0;width:100%;
   .newspaper-tabs-bottom {
-    bottom: 0px;
-    position: absolute;
+    bottom: 0;
+    position: fixed;
     width: 100%;
+    left:0;
+    z-index:90;
+    width:100%;
+    background:#212121;
+    color:#fff!important;
+
+
+    .indicator {
+      bottom:auto!important;
+      top:0!important;
+      background-color:#00B7F4!important;
+    }
+    .tabs {
+      background:none!important;
+      .active {
+        box-shadow: 0px 4px 0px 0px #00B7F4 inset;
+      }
+      a {
+        color:#fff;font-size:14px;font-weight:bold;
+
+        &:hover {
+          color:inherit!important;
+        }
+      }
+    }
+  }
+  .slick-prev, .slick-next {
+   position:absolute;bottom:0;border:none;color:#fff;height:48px;width:38px;
+   opacity:1;
+
+   transition:all .2ms ease-in-out;
+   -moz-transition:all .2ms ease-in-out;
+   -webkit-transition:all .2ms ease-in-out;
+
+    i {
+      float:left;font-size:22px;
+    }
+
+  }
+  .slick-disabled {
+    opacity:0;
+  }
+  .slick-prev {
+    left:0;
+
+
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&amp;1+0,0+100;White+to+Transparent */
+    background: -moz-linear-gradient(left,  rgba(255,255,255,.35) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,.35)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgba(255,255,255,.35) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgba(255,255,255,.35) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgba(255,255,255,.35) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgba(255,255,255,.35) 0%,rgba(255,255,255,0) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
+
+  }
+  .slick-next {
+    right:0;
+
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&amp;0+0,1+100 */
+    background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,.35) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,.35))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,.35) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,.35) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,.35) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,.35) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+
   }
 }
