configurado as rotas jornal

--- a/app/client/templates/pages/newspaper/layouts/navigationTabs.html
+++ b/app/client/templates/pages/newspaper/layouts/navigationTabs.html
@@ -4,13 +4,13 @@
 
       <ul class="tabs tabs-items">
 
-        <li class="tab col {{isActiveRoute 'newspaper'}}"><a data-transition-out="slideRightOut" data-transition-in="slideRightIn" href="{{ pathFor 'newspaper' }}">Capa</a></li>
-        <li class="tab col {{isActiveRoute 'newspaperLatest'}}"><a data-transition-out="slideRightOut" data-transition-in="slideRightIn" href="{{ pathFor 'newspaperLatest' }}">Últimas</a></li>
-        <li class="tab col {{isActiveRoute 'newspaperSection'}}"><a data-transition-out="slideRightOut" data-transition-in="slideRightIn" href="{{ pathFor 'newspaperSection' }}">Seções</a></li>
-        <li class="tab col {{isActiveRoute 'newspaperColumns'}}"><a data-transition-out="slideRightOut" data-transition-in="slideRightIn" href="{{ pathFor 'newspaperColumns' }}">Colunas</a></li>
-        <li class="tab col {{isActiveRoute 'newspaperSpecials'}}"><a data-transition-out="slideRightOut" data-transition-in="slideRightIn" href="{{ pathFor 'newspaperSpecials' }}">Especiais</a></li>
-        <li class="tab col {{isActiveRoute 'newspaperPhotos'}}"><a data-transition-out="slideRightOut" data-transition-in="slideRightIn" href="{{ pathFor 'newspaperPhotos' }}">Fotos</a></li>
-        <li class="tab col {{isActiveRoute 'newspaperVideos'}}"><a data-transition-out="slideRightOut" data-transition-in="slideRightIn" href="{{ pathFor 'newspaperVideos' }}">Vídeos</a></li>
+        <li class="tab col {{isActiveRoute 'newspaper'}}"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'newspaper' }}">Capa</a></li>
+        <li class="tab col {{isActiveRoute 'contentNewspaperLatest'}}"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'contentNewspaperLatest' }}">Últimas</a></li>
+        <li class="tab col {{isActiveRoute 'newspaperSection'}}"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'newspaperSection' }}">Seções</a></li>
+        <li class="tab col {{isActiveRoute 'newspaperColumns'}}"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'newspaperColumns' }}">Colunas</a></li>
+        <li class="tab col {{isActiveRoute 'newspaperSpecials'}}"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'newspaperSpecials' }}">Especiais</a></li>
+        <li class="tab col {{isActiveRoute 'newspaperPhotos'}}"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'newspaperPhotos' }}">Fotos</a></li>
+        <li class="tab col {{isActiveRoute 'newspaperVideos'}}"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'newspaperVideos' }}">Vídeos</a></li>
 
       </ul>
 
