--- a/app/client/templates/pages/newspaper/pages/latest/contentNewspaperLatest.html
+++ b/app/client/templates/pages/newspaper/pages/latest/contentNewspaperLatest.html
@@ -1,6 +1,6 @@
-<template name="newspaperLatest">
+<template name="contentNewspaperLatest">
 
-   <div class="newspaper-page transitions-content latest">
+   <div class="newspaper-page transitions-content">
 
     {{> yield "navigation" }}
 
@@ -12,7 +12,7 @@
 
         <div class="tab-container">
 
-          {{> yield "content" }}
+          aaaa
 
         </div>
 
