--- a/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
+++ b/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
@@ -11,7 +11,7 @@
       </div>
 
       <a href="#" class="logo">
-        <img src="/images/newspaper/logo-jornal-white.svg" height="28" alt="" />
+        <img src="/images/newspaper/logo-jornal-white.png" height="28" alt="" />
       </a>
 
       <div class="side-right">
