--- a/app/client/templates/pages/newspaper/pages/featured/contentNewspaperFeatured.html
+++ b/app/client/templates/pages/newspaper/pages/featured/contentNewspaperFeatured.html
@@ -1,6 +1,6 @@
 <template name="contentNewspaperFeatured">
 
- <section class="slider-featured">
+<section class="slider-featured">
 
   <div class="inner-slider">
     <figure class="image-featured">
@@ -73,12 +73,12 @@
         <img src="/images/newspaper/img-destaque3.png" width="100%" />
       </a>
     </figure>
-    <div class="info-featured">
+    <div class="info-featured"><!--
       <h2 class="title-featured">
         <a href="#">
           Possivel candidatura de vice deixa Obama em situação desconfortável
         </a>
-      </h2>
+      </h2> -->
       <p class="description-featured">
         O Presidente Barack Obama está em situação desconfortável, apanhado entre as aspirações à Casa
       </p>
@@ -133,5 +133,50 @@
   </div>
 
 </section>
+
+
+<div class="main-list">
+
+  <div class="post-model">
+    <figure class="post-image">
+      <img src="/images/newspaper/img-post1.png" width="100%" />
+    </figure>
+
+    <h2 class="post-title">
+      <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
+    </h2>
+
+    <div class="post-info">
+      <strong class="post-info-author">
+        <a href="#" title="">PAULA FERNANDES</a>
+      </strong>
+      <span class="post-info-date">
+        - 15/02/2015
+      </span>
+    </div>
+
+  </div>
+
+  <div class="post-model">
+    <figure class="post-image">
+      <img src="/images/newspaper/img-post2.png" width="100%" />
+    </figure>
+
+    <h2 class="post-title">
+      <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
+    </h2>
+
+    <div class="post-info">
+      <strong class="post-info-author">
+        <a href="#" title="">PAULA FERNANDES</a>
+      </strong>
+      <span class="post-info-date">
+        - 15/02/2015
+      </span>
+    </div>
+
+  </div>
+
+</div>
 
 </template>
